--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -1,6 +1,34 @@
+@import "colors";
+
 @mixin center-absolute {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@mixin input-ui {
+  background: $white;
+  border: 2px solid $gray;
+  padding: 12px;
+  border-radius: 8px;
+
+  font-family: Jost;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: $dark;
+
+  &::placeholder {
+    font-family: Jost;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: $gray2;
+  }
+
+  &:focus {
+    border-color: $orange;
+    outline: none;
+  }
 }
