--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,21 @@
 @import"https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Prosto+One&display=swap";*{ box-sizing:border-box }
 .content{ max-width:1480px; margin:auto }
+.input-ui{ background:#fff; border:2px solid #edeef0; padding:12px; border-radius:8px; font-family:Jost; font-weight:400; font-size:16px; line-height:24px; color:#101828; width:500px }
+.input-ui::placeholder{ font-family:Jost; font-weight:400; font-size:16px; line-height:24px; color:#b6bbc7 }
+.input-ui:focus{ border-color:#fb9505; outline:none }
 section.feedback .feedback_wrapper{ display:flex; border-radius:40px; overflow:hidden }
-section.feedback .feedback_wrapper form.form{ width:880px; background:#6a50ba }
+section.feedback .feedback_wrapper form.form{ width:880px; background:#6a50ba; padding:60px; position:relative }
+section.feedback .feedback_wrapper form.form .bgFeedback{ position:absolute; width:273px; right:0; top:0 }
+section.feedback .feedback_wrapper form.form .title{ font-family:Prosto One; font-weight:400; font-size:42px; line-height:44px; color:#fff; margin-bottom:12px }
+section.feedback .feedback_wrapper form.form .pre_title{ font-family:Jost; font-weight:400; font-size:24px; line-height:24px; color:#fff; margin-bottom:40px }
+section.feedback .feedback_wrapper form.form .wrapper_inputs{ display:flex; flex-direction:column; gap:12px }
+section.feedback .feedback_wrapper form.form .approval{ display:flex; gap:8px; width:500px; margin-top:24px; cursor:pointer }
+section.feedback .feedback_wrapper form.form .approval .approval_description{ font-family:Jost; font-weight:400; font-size:12px; line-height:16px; color:#fff }
+section.feedback .feedback_wrapper form.form .group_buttons{ display:flex; align-items:center; gap:16px; margin-top:24px }
+section.feedback .feedback_wrapper form.form .group_buttons button.send{ padding:12px; border-radius:8px; background:#fb9505; border:none; cursor:pointer; font-family:Jost; font-weight:500; font-size:16px; line-height:24px; color:#fff }
+section.feedback .feedback_wrapper form.form .group_buttons .send_telegram{ text-decoration:none; display:flex; align-items:center; gap:8px; padding:12px; background:#8267d8; border-radius:8px }
+section.feedback .feedback_wrapper form.form .group_buttons .send_telegram img{ width:24px }
+section.feedback .feedback_wrapper form.form .group_buttons .send_telegram span{ font-family:Jost; font-weight:500; font-size:16px; line-height:24px; color:#fff }
 section.feedback .feedback_wrapper .wrapper_content{ width:600px; background:#a689ff; padding:60px }
 section.feedback .feedback_wrapper .wrapper_content .title{ font-family:Prosto One; font-weight:400; font-size:28px; line-height:32px; color:#fff }
 section.feedback .feedback_wrapper .wrapper_content .wrapper_description{ display:flex; flex-direction:column; gap:16px; margin-top:32px }
