--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,36 @@
 @import"https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Prosto+One&display=swap";@import'intl-tel-input/build/css/intlTelInput.min.css';*{ box-sizing:border-box }
 .content{ max-width:1480px; margin:auto }
-.input-ui{ background:#fff; border:2px solid #edeef0; padding:12px; border-radius:8px; font-family:Jost; font-weight:400; font-size:16px; line-height:24px; color:#101828; width:500px }
+@media screen and (max-width:1480px){ .content{max-width:728px }
+}
+.input-ui{ background:#fff; border:2px solid #edeef0; padding:12px; border-radius:8px; font-family:Jost; font-weight:400; font-size:16px; line-height:24px; color:#101828; width:100% }
 .input-ui::placeholder{ font-family:Jost; font-weight:400; font-size:16px; line-height:24px; color:#b6bbc7 }
 .input-ui:focus{ border-color:#fb9505; outline:none }
-.checkbox-ui{ width:20px; height:20px }
+.checkbox-ui{ width:20px; height:20px; max-width:20px; min-width:20px; max-height:20px; min-height:20px; border-radius:4px; overflow:hidden; position:relative; display:block }
+.checkbox-ui input{ position:absolute }
+.checkbox-ui span{ position:absolute; top:0; left:0; right:0; bottom:0; border:2px solid #fff }
+.checkbox-ui img{ visibility:hidden; width:12px; position:absolute; top:50%; left:50%; transform:translate(-50%,-50%) }
+.checkbox-ui input:checked~span{ background:#fb9505; border:none }
+.checkbox-ui input:checked~img{ visibility:visible }
 .checkbox-ui input{ visibility:hidden }
 section.feedback .feedback_wrapper{ display:flex; border-radius:40px; overflow:hidden }
+@media screen and (max-width:1480px){ section.feedback .feedback_wrapper{flex-direction:column }
+}
 section.feedback .feedback_wrapper form.form{ width:880px; background:#6a50ba; padding:60px; position:relative }
+@media screen and (max-width:1480px){ section.feedback .feedback_wrapper form.form{width:100% }
+}
 section.feedback .feedback_wrapper form.form .bgFeedback{ position:absolute; width:273px; right:0; top:0 }
 section.feedback .feedback_wrapper form.form .title{ font-family:Prosto One; font-weight:400; font-size:42px; line-height:44px; color:#fff; margin-bottom:12px }
+@media screen and (max-width:728px){ section.feedback .feedback_wrapper form.form .title{font-size:32px }
+}
 section.feedback .feedback_wrapper form.form .pre_title{ font-family:Jost; font-weight:400; font-size:24px; line-height:24px; color:#fff; margin-bottom:40px }
-section.feedback .feedback_wrapper form.form .wrapper_inputs{ display:flex; flex-direction:column; gap:12px }
+@media screen and (max-width:728px){ section.feedback .feedback_wrapper form.form .pre_title{font-size:18px }
+}
+section.feedback .feedback_wrapper form.form .wrapper_inputs{ display:flex; flex-direction:column; gap:12px; width:500px }
+@media screen and (max-width:1480px){ section.feedback .feedback_wrapper form.form .wrapper_inputs{width:420px }
+}
 section.feedback .feedback_wrapper form.form .approval{ display:flex; gap:8px; width:500px; margin-top:24px; cursor:pointer }
+@media screen and (max-width:1480px){ section.feedback .feedback_wrapper form.form .approval{width:420px }
+}
 section.feedback .feedback_wrapper form.form .approval .approval_description{ font-family:Jost; font-weight:400; font-size:12px; line-height:16px; color:#fff }
 section.feedback .feedback_wrapper form.form .group_buttons{ display:flex; align-items:center; gap:16px; margin-top:24px }
 section.feedback .feedback_wrapper form.form .group_buttons button.send{ padding:12px; border-radius:8px; background:#fb9505; border:none; cursor:pointer; font-family:Jost; font-weight:500; font-size:16px; line-height:24px; color:#fff }
@@ -19,9 +38,15 @@ section.feedback .feedback_wrapper form.form .group_buttons .send_telegram{ text
 section.feedback .feedback_wrapper form.form .group_buttons .send_telegram img{ width:24px }
 section.feedback .feedback_wrapper form.form .group_buttons .send_telegram span{ font-family:Jost; font-weight:500; font-size:16px; line-height:24px; color:#fff }
 section.feedback .feedback_wrapper .wrapper_content{ width:600px; background:#a689ff; padding:60px }
+@media screen and (max-width:1480px){ section.feedback .feedback_wrapper .wrapper_content{width:100% }
+}
 section.feedback .feedback_wrapper .wrapper_content .title{ font-family:Prosto One; font-weight:400; font-size:28px; line-height:32px; color:#fff }
 section.feedback .feedback_wrapper .wrapper_content .wrapper_description{ display:flex; flex-direction:column; gap:16px; margin-top:32px }
+@media screen and (max-width:1480px){ section.feedback .feedback_wrapper .wrapper_content .wrapper_description{flex-direction:row; flex-wrap:wrap }
+}
 section.feedback .feedback_wrapper .wrapper_content .wrapper_description .description_item{ display:flex; align-items:center; gap:16px }
+@media screen and (max-width:1480px){ section.feedback .feedback_wrapper .wrapper_content .wrapper_description .description_item{width:296px }
+}
 section.feedback .feedback_wrapper .wrapper_content .wrapper_description .description_item .wrapper_icon{ width:64px; height:64px; border-radius:16px; background:#fff; position:relative; flex-shrink:0 }
 section.feedback .feedback_wrapper .wrapper_content .wrapper_description .description_item .wrapper_icon img.icon{ width:32px; position:absolute; top:50%; left:50%; transform:translate(-50%,-50%) }
 section.feedback .feedback_wrapper .wrapper_content .wrapper_description .description_item .description{ font-family:Jost; font-weight:400; font-size:18px; line-height:26px; color:#fff }
