Реализовала мобильную верстку

--- a/src/style.css
+++ b/src/style.css
@@ -15,10 +15,16 @@
 section.feedback .feedback_wrapper{ display:flex; border-radius:40px; overflow:hidden }
 @media screen and (max-width:1480px){ section.feedback .feedback_wrapper{flex-direction:column }
 }
+@media screen and (max-width:728px){ section.feedback .feedback_wrapper{border-radius:0 }
+}
 section.feedback .feedback_wrapper form.form{ width:880px; background:#6a50ba; padding:60px; position:relative }
 @media screen and (max-width:1480px){ section.feedback .feedback_wrapper form.form{width:100% }
 }
+@media screen and (max-width:728px){ section.feedback .feedback_wrapper form.form{padding:40px 24px }
+}
 section.feedback .feedback_wrapper form.form .bgFeedback{ position:absolute; width:273px; right:0; top:0 }
+@media screen and (max-width:728px){ section.feedback .feedback_wrapper form.form .bgFeedback{display:none }
+}
 section.feedback .feedback_wrapper form.form .title{ font-family:Prosto One; font-weight:400; font-size:42px; line-height:44px; color:#fff; margin-bottom:12px }
 @media screen and (max-width:728px){ section.feedback .feedback_wrapper form.form .title{font-size:32px }
 }
@@ -28,19 +34,29 @@ section.feedback .feedback_wrapper form.form .pre_title{ font-family:Jost; font-
 section.feedback .feedback_wrapper form.form .wrapper_inputs{ display:flex; flex-direction:column; gap:12px; width:500px }
 @media screen and (max-width:1480px){ section.feedback .feedback_wrapper form.form .wrapper_inputs{width:420px }
 }
+@media screen and (max-width:728px){ section.feedback .feedback_wrapper form.form .wrapper_inputs{width:100% }
+}
 section.feedback .feedback_wrapper form.form .approval{ display:flex; gap:8px; width:500px; margin-top:24px; cursor:pointer }
 @media screen and (max-width:1480px){ section.feedback .feedback_wrapper form.form .approval{width:420px }
 }
+@media screen and (max-width:728px){ section.feedback .feedback_wrapper form.form .approval{width:100% }
+}
 section.feedback .feedback_wrapper form.form .approval .approval_description{ font-family:Jost; font-weight:400; font-size:12px; line-height:16px; color:#fff }
 section.feedback .feedback_wrapper form.form .group_buttons{ display:flex; align-items:center; gap:16px; margin-top:24px }
+@media screen and (max-width:728px){ section.feedback .feedback_wrapper form.form .group_buttons{flex-direction:column; align-items:stretch }
+}
 section.feedback .feedback_wrapper form.form .group_buttons button.send{ padding:12px; border-radius:8px; background:#fb9505; border:none; cursor:pointer; font-family:Jost; font-weight:500; font-size:16px; line-height:24px; color:#fff }
-section.feedback .feedback_wrapper form.form .group_buttons .send_telegram{ text-decoration:none; display:flex; align-items:center; gap:8px; padding:12px; background:#8267d8; border-radius:8px }
+section.feedback .feedback_wrapper form.form .group_buttons .send_telegram{ text-decoration:none; display:flex; justify-content:center; gap:8px; padding:12px; background:#8267d8; border-radius:8px }
 section.feedback .feedback_wrapper form.form .group_buttons .send_telegram img{ width:24px }
 section.feedback .feedback_wrapper form.form .group_buttons .send_telegram span{ font-family:Jost; font-weight:500; font-size:16px; line-height:24px; color:#fff }
 section.feedback .feedback_wrapper .wrapper_content{ width:600px; background:#a689ff; padding:60px }
 @media screen and (max-width:1480px){ section.feedback .feedback_wrapper .wrapper_content{width:100% }
 }
+@media screen and (max-width:728px){ section.feedback .feedback_wrapper .wrapper_content{padding:40px 24px }
+}
 section.feedback .feedback_wrapper .wrapper_content .title{ font-family:Prosto One; font-weight:400; font-size:28px; line-height:32px; color:#fff }
+@media screen and (max-width:728px){ section.feedback .feedback_wrapper .wrapper_content .title{font-size:18px }
+}
 section.feedback .feedback_wrapper .wrapper_content .wrapper_description{ display:flex; flex-direction:column; gap:16px; margin-top:32px }
 @media screen and (max-width:1480px){ section.feedback .feedback_wrapper .wrapper_content .wrapper_description{flex-direction:row; flex-wrap:wrap }
 }
@@ -48,5 +64,11 @@ section.feedback .feedback_wrapper .wrapper_content .wrapper_description .descri
 @media screen and (max-width:1480px){ section.feedback .feedback_wrapper .wrapper_content .wrapper_description .description_item{width:296px }
 }
 section.feedback .feedback_wrapper .wrapper_content .wrapper_description .description_item .wrapper_icon{ width:64px; height:64px; border-radius:16px; background:#fff; position:relative; flex-shrink:0 }
+@media screen and (max-width:728px){ section.feedback .feedback_wrapper .wrapper_content .wrapper_description .description_item .wrapper_icon{width:48px; height:48px }
+}
 section.feedback .feedback_wrapper .wrapper_content .wrapper_description .description_item .wrapper_icon img.icon{ width:32px; position:absolute; top:50%; left:50%; transform:translate(-50%,-50%) }
+@media screen and (max-width:728px){ section.feedback .feedback_wrapper .wrapper_content .wrapper_description .description_item .wrapper_icon img.icon{width:24px }
+}
 section.feedback .feedback_wrapper .wrapper_content .wrapper_description .description_item .description{ font-family:Jost; font-weight:400; font-size:18px; line-height:26px; color:#fff }
+@media screen and (max-width:728px){ section.feedback .feedback_wrapper .wrapper_content .wrapper_description .description_item .description{font-size:16px }
+}
